Bug 127673 - Crash when double tap'ing a table copyed from calc to writer in iOS
Summary: Crash when double tap'ing a table copyed from calc to writer in iOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-20 14:51 UTC by Nicolas Christener
Modified: 2019-11-04 09:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Video demonstrating the issue (967.22 KB, video/mp4)
2019-09-20 14:54 UTC, Nicolas Christener
Details
Reproducer document (14.56 KB, application/vnd.oasis.opendocument.text)
2019-09-24 09:59 UTC, Jan Holesovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-09-20 14:51:23 UTC
Description:
Copy/paste from calc -> writer works in iOS. If one doble taps on such a table the app crashes.

Steps to Reproduce:
1. Copy a selection from calc to writer in the iOS app
2. Double tap on the table

Actual Results:
The app crashes.

Expected Results:
The app should not crash.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-09-20 14:54:21 UTC
Created attachment 154328 [details]
Video demonstrating the issue
Comment 2 Jan Holesovsky 2019-09-24 09:59:46 UTC
Created attachment 154419 [details]
Reproducer document

Suspect that the problem is not the copy/paste itself, but handling of the embedded calc sheet - attaching such a document.
Comment 3 Xisco Faulí 2019-09-24 10:48:40 UTC
Moving to NEW as agreed in the ESC meeting
Comment 4 How can I remove my account? 2019-09-24 11:15:44 UTC
Double-tapping the Calc table in the document in normal Online (built from the same branches, core: cp-6.0 and online: collabora-online-4, I get a crash in the loolkit process.

Interestingly, in a fresh build of the iOS app, I don't get a crash. (But the Calc object does not behave like it does in desktop LO either.)
Comment 5 Commit Notification 2019-09-26 07:33:51 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3f249c1351642be6f2774230ff80a6d20bd1401

tdf#127673 lok: On double-click, don't enter the embedded objects in Writer.

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Jan Holesovsky 2019-09-26 11:42:34 UTC
Bug 123741 is actually related here.
Comment 7 Jan Holesovsky 2019-09-27 07:36:45 UTC
The comment 6 should have mentioned bug 116685, sorry.
Comment 8 Jan Holesovsky 2019-09-27 07:43:46 UTC
Nicolas: The crash should be fixed by the commit from comment 5.

I wanted to go further and fix the fact that we shouldn't be creating an embedded object in the first place, but a normal table (see bug 116685), but Tor says that the fix for the bug 116685 does not fix it for iPad.

I suggest to close this bug 127673 that reported the crash, open a new equivalent of bug 116685 for iPad separately, and assign it a prio as you see fit.  Does that work for you?
Comment 9 Nicolas Christener 2019-09-27 08:55:38 UTC
Hi Kendy

Thanks for looking into this and also fixing the crash!

I agree that we can close this bug and then add a new equivalent of bug 116685 for iPad separately. Should I create that one or do you wish to create it with all the relevant information?

Thanks a lot,
Nicolas
Comment 10 Jan Holesovsky 2019-09-27 09:22:56 UTC
Nicolas: Thank you!  If you can create one & assign it a prio in your sheet that would be great, Tor or me will add the relevant info into the bug.

And I'm closing this one :-)