tdf#127673 lok: On double-click, don't enter the embedded objects in Writer.

There are all sorts of problems when we'd try to edit the embedded
objects, like that that LOK thinks it is a separate view etc., so better
to disable it for now, before we really need to edit embedded objects.

Change-Id: Ie8c0249cb0ca8b25a2ac97c1ccec4a5a62cbb770