sw/source/uibase/wrtsh/wrtsh1.cxx
@@ -626,6 +626,12 @@ void SwWrtShell::LaunchOLEObj( long nVerb )
         svt::EmbeddedObjectRef& xRef = GetOLEObject();
         OSL_ENSURE( xRef.is(), "OLE not found" );
 
+        // LOK: we don't want to handle any other embedded objects than
+        // charts, there are too many problems with eg. embedded spreadsheets
+        // (like it creates a separate view for the calc sheet)
+        if (comphelper::LibreOfficeKit::isActive() && !SotExchange::IsChart(xRef->getClassID()))
+            return;
+
         SfxInPlaceClient* pCli = GetView().FindIPClient( xRef.GetObject(), &GetView().GetEditWin() );
         if ( !pCli )
             pCli = new SwOleClient( &GetView(), &GetView().GetEditWin(), xRef );
